kubernetes/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlp-production
  namespace: nlp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nlp-production
  template:
    metadata:
      labels:
        app: nlp-production
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: api
          image: ghcr.io/logora/logora-nlp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "300Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "100m"
