kubernetes/production/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nlp-production
  namespace: nlp
spec:
  selector:
    app: nlp-production
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
