kubernetes/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nlp-production-ingress
  namespace: nlp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nlp.logora.fr
    secretName: nlp-production-tls
  rules:
  - host: nlp.logora.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nlp-production
            port:
              number: 8000
